--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             </div>
             <button class="nav-btn"><a href="">Contact</a></button>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h2 class="banner-title"><span id="emp">Empowering</span>
+                    students from small age <span id="t-v">towards vision</span>
+                </h2>
+                <p class="banner-para">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="banner-btn">Enroll Now</button>
+            </div>
+            <img src="assets/hero-kids.png" alt="">
+        </div>
     </header>
     <main>
 
