--- a/index.html
+++ b/index.html
@@ -28,14 +28,92 @@
                 <h2 class="banner-title"><span id="emp">Empowering</span>
                     students from small age <span id="t-v">towards vision</span>
                 </h2>
-                <p class="banner-para">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                <p class="banner-para">With the courage, Confidence, Creativity and Compassion to make their Unique
+                    Contribution in a Diverse and Dynamic World.</p>
                 <button class="banner-btn">Enroll Now</button>
             </div>
             <img src="assets/hero-kids.png" alt="">
         </div>
     </header>
     <main>
+        <section class="standard-curriculum">
+            <h2 class="sc-title">Standard Curriculum</h2>
+            <div class="card-container">
+                <div class="cards">
+                    <div class="card-1">
+                        <img src="assets/kinder.png" alt="">
+                        <h3 class="card-title">Kinder (3-6) Years</h3>
+                        <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu sdis parturient</p>
+                        <p class="card-small-para-1">Read More</p>
+                    </div>
+                    <div class="card-2">
+                        <img src="assets/elementary.png" alt="">
+                        <h3 class="card-title">Elementary School</h3>
+                        <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu sdis parturient</p>
+                        <p class="card-small-para-2">Read More</p>
+                    </div>
+                    <div class="card-3">
+                        <img src="assets/middle.png" alt="">
+                        <h3 class="card-title">Middle (10-16) Years</h3>
+                        <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu sdis parturient</p>
+                        <p class="card-small-para-3">Read More</p>
+                    </div>
+                </div>
+            </div>
+            <div class="buttons-wrapper">
+                <button class="btn-left"></button>
+                <button class="btn-right"></button>
+              </div>
+        </section>
+        <section class="Our-Stories">
+            <div class="story-container">
+                <div class="large-story">
+                  <img src="assets/story-1.png" alt="Large Card Image">
+                  <div class="story-content">
+                    <span class="story-1-date">November 19, 2019</span>
+                    <h3 class="story-big-title">A fun toddler coloring training on classroom</h3>
+                    <p class="story-1-description">
+                      Beautiful branding for changes by Never Now in Australia changes is a platform for open
+                      discussion in an inclusive and collaborative environment, providing the...
+                    </p>
+                  </div>
+                </div>
+                <div class="small-stories">
+                  <div class="small-story">
+                    <img src="assets/story-2.png" alt="Small Card Image">
+                    <div class="story-content">
+                      <span class="story-date">November 15, 2019</span>
+                      <h3 class="story-small-title">Find out if a school fits the family's needs</h3>
+                    </div>
+                  </div>
+                  <div class="story-card">
+                    <img src="assets/story-3.png" alt="Small Card Image">
+                    <div class="story-content">
+                      <span class="story-date">November 10, 2019</span>
+                      <h3 class="story-small-title">Summer math & literacy centers for kids</h3>
+                    </div>
+                  </div>
+                  <div class="small-story">
+                    <img src="assets/story-4.png" alt="Small Card Image">
+                    <div class="story-content">
+                      <span class="story-date">September 10, 2019</span>
+                      <h3 class="story-small-title">Classroom management techniques for new tutors</h3>
+                    </div>
+                  </div>
+                  <div class="small-story">
+                    <img src="assets/story-5.png" alt="Small Card Image">
+                    <div class="story-content">
+                      <span class="story-date">July 19, 2019</span>
+                      <h3 class="story-small-title">Conversation rhymes improve kids listening</h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="view-all">
+                <button>View All</button>
+              </div>
 
+        </section>
     </main>
     <footer>
 
