--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </section>
         <section class="Our-Stories">
             <div class="story-container">
-                <div class="large-story">
+                <div class="large story">
                   <img src="assets/story-1.png" alt="Large Card Image">
                   <div class="story-content">
                     <span class="story-1-date">November 19, 2019</span>
@@ -79,28 +79,28 @@
                   </div>
                 </div>
                 <div class="small-stories">
-                  <div class="small-story">
+                  <div class="small-1 story">
                     <img src="assets/story-2.png" alt="Small Card Image">
                     <div class="story-content">
                       <span class="story-date">November 15, 2019</span>
                       <h3 class="story-small-title">Find out if a school fits the family's needs</h3>
                     </div>
                   </div>
-                  <div class="story-card">
+                  <div class="small-2 story">
                     <img src="assets/story-3.png" alt="Small Card Image">
                     <div class="story-content">
                       <span class="story-date">November 10, 2019</span>
                       <h3 class="story-small-title">Summer math & literacy centers for kids</h3>
                     </div>
                   </div>
-                  <div class="small-story">
+                  <div class="small-3 story">
                     <img src="assets/story-4.png" alt="Small Card Image">
                     <div class="story-content">
                       <span class="story-date">September 10, 2019</span>
                       <h3 class="story-small-title">Classroom management techniques for new tutors</h3>
                     </div>
                   </div>
-                  <div class="small-story">
+                  <div class="small-4 story">
                     <img src="assets/story-5.png" alt="Small Card Image">
                     <div class="story-content">
                       <span class="story-date">July 19, 2019</span>
@@ -109,7 +109,7 @@
                   </div>
                 </div>
               </div>
-              <div class="view-all">
+              <div class="view-all-btn">
                 <button>View All</button>
               </div>
 
