--- a/index.html
+++ b/index.html
@@ -2,122 +2,148 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kids Education</title>
-    <link rel="stylesheet" href="style/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kids Education</title>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body class="quicksand-font">
-    <header>
-        <nav class="nav">
-            <div class="navbar">
-                <img src="assets/logo.png" alt="">
-                <h2 class="logo-name">SCHOOL</h2>
-            </div>
-            <div class="nav-links">
-                <div class="link-1"><a href="">Home</a></div>
-                <div class="link-2"><a href="">About</a></div>
-                <div class="link-3"><a href="">Facilities</a></div>
-                <div class="link-4"><a href="">Admission</a></div>
-            </div>
-            <button class="nav-btn"><a href="">Contact</a></button>
-        </nav>
-        <div class="banner">
-            <div class="banner-content">
-                <h2 class="banner-title"><span id="emp">Empowering</span>
-                    students from small age <span id="t-v">towards vision</span>
-                </h2>
-                <p class="banner-para">With the courage, Confidence, Creativity and Compassion to make their Unique
-                    Contribution in a Diverse and Dynamic World.</p>
-                <button class="banner-btn">Enroll Now</button>
-            </div>
-            <img src="assets/hero-kids.png" alt="">
+  <header>
+    <nav class="nav">
+      <div class="navbar">
+        <img src="assets/logo.png" alt="">
+        <h2 class="logo-name">SCHOOL</h2>
+      </div>
+      <div class="nav-links">
+        <div class="link-1"><a href="">Home</a></div>
+        <div class="link-2"><a href="">About</a></div>
+        <div class="link-3"><a href="">Facilities</a></div>
+        <div class="link-4"><a href="">Admission</a></div>
+      </div>
+      <button class="nav-btn"><a href="">Contact</a></button>
+    </nav>
+    <div class="banner">
+      <div class="banner-content">
+        <h2 class="banner-title"><span id="emp">Empowering</span>
+          students from small age <span id="t-v">towards vision</span>
+        </h2>
+        <p class="banner-para">With the courage, Confidence, Creativity and Compassion to make their Unique
+          Contribution in a Diverse and Dynamic World.</p>
+        <button class="banner-btn">Enroll Now</button>
+      </div>
+      <img src="assets/hero-kids.png" alt="">
+    </div>
+  </header>
+  <main>
+    <section class="standard-curriculum">
+      <h2 class="sc-title">Standard Curriculum</h2>
+      <div class="card-container">
+        <div class="cards">
+          <div class="card-1">
+            <img src="assets/kinder.png" alt="">
+            <h3 class="card-title">Kinder (3-6) Years</h3>
+            <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu
+              sdis parturient</p>
+            <p class="card-small-para-1">Read More</p>
+          </div>
+          <div class="card-2">
+            <img src="assets/elementary.png" alt="">
+            <h3 class="card-title">Elementary School</h3>
+            <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu
+              sdis parturient</p>
+            <p class="card-small-para-2">Read More</p>
+          </div>
+          <div class="card-3">
+            <img src="assets/middle.png" alt="">
+            <h3 class="card-title">Middle (10-16) Years</h3>
+            <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu
+              sdis parturient</p>
+            <p class="card-small-para-3">Read More</p>
+          </div>
         </div>
-    </header>
-    <main>
-        <section class="standard-curriculum">
-            <h2 class="sc-title">Standard Curriculum</h2>
-            <div class="card-container">
-                <div class="cards">
-                    <div class="card-1">
-                        <img src="assets/kinder.png" alt="">
-                        <h3 class="card-title">Kinder (3-6) Years</h3>
-                        <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu sdis parturient</p>
-                        <p class="card-small-para-1">Read More</p>
-                    </div>
-                    <div class="card-2">
-                        <img src="assets/elementary.png" alt="">
-                        <h3 class="card-title">Elementary School</h3>
-                        <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu sdis parturient</p>
-                        <p class="card-small-para-2">Read More</p>
-                    </div>
-                    <div class="card-3">
-                        <img src="assets/middle.png" alt="">
-                        <h3 class="card-title">Middle (10-16) Years</h3>
-                        <p class="card-para">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculous mu sdis parturient</p>
-                        <p class="card-small-para-3">Read More</p>
-                    </div>
-                </div>
+      </div>
+      <div class="buttons-wrapper">
+        <button class="btn-left"></button>
+        <button class="btn-right"></button>
+      </div>
+    </section>
+    <section class="Our-Stories">
+      <div class="story-container">
+        <div class="large story">
+          <img src="assets/story-1.png" alt="Large Card Image">
+          <div class="story-content">
+            <span class="story-1-date">November 19, 2019</span>
+            <h3 class="story-big-title">A fun toddler coloring training on classroom</h3>
+            <p class="story-1-description">
+              Beautiful branding for changes by Never Now in Australia changes is a platform for open
+              discussion in an inclusive and collaborative environment, providing the...
+            </p>
+          </div>
+        </div>
+        <div class="small-stories">
+          <div class="small-1 story">
+            <img src="assets/story-2.png" alt="Small Card Image">
+            <div class="story-content">
+              <span class="story-date">November 15, 2019</span>
+              <h3 class="story-small-title">Find out if a school fits the family's needs</h3>
             </div>
-            <div class="buttons-wrapper">
-                <button class="btn-left"></button>
-                <button class="btn-right"></button>
-              </div>
-        </section>
-        <section class="Our-Stories">
-            <div class="story-container">
-                <div class="large story">
-                  <img src="assets/story-1.png" alt="Large Card Image">
-                  <div class="story-content">
-                    <span class="story-1-date">November 19, 2019</span>
-                    <h3 class="story-big-title">A fun toddler coloring training on classroom</h3>
-                    <p class="story-1-description">
-                      Beautiful branding for changes by Never Now in Australia changes is a platform for open
-                      discussion in an inclusive and collaborative environment, providing the...
-                    </p>
-                  </div>
-                </div>
-                <div class="small-stories">
-                  <div class="small-1 story">
-                    <img src="assets/story-2.png" alt="Small Card Image">
-                    <div class="story-content">
-                      <span class="story-date">November 15, 2019</span>
-                      <h3 class="story-small-title">Find out if a school fits the family's needs</h3>
-                    </div>
-                  </div>
-                  <div class="small-2 story">
-                    <img src="assets/story-3.png" alt="Small Card Image">
-                    <div class="story-content">
-                      <span class="story-date">November 10, 2019</span>
-                      <h3 class="story-small-title">Summer math & literacy centers for kids</h3>
-                    </div>
-                  </div>
-                  <div class="small-3 story">
-                    <img src="assets/story-4.png" alt="Small Card Image">
-                    <div class="story-content">
-                      <span class="story-date">September 10, 2019</span>
-                      <h3 class="story-small-title">Classroom management techniques for new tutors</h3>
-                    </div>
-                  </div>
-                  <div class="small-4 story">
-                    <img src="assets/story-5.png" alt="Small Card Image">
-                    <div class="story-content">
-                      <span class="story-date">July 19, 2019</span>
-                      <h3 class="story-small-title">Conversation rhymes improve kids listening</h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="view-all-btn">
-                <button>View All</button>
-              </div>
+          </div>
+          <div class="small-2 story">
+            <img src="assets/story-3.png" alt="Small Card Image">
+            <div class="story-content">
+              <span class="story-date">November 10, 2019</span>
+              <h3 class="story-small-title">Summer math & literacy centers for kids</h3>
+            </div>
+          </div>
+          <div class="small-3 story">
+            <img src="assets/story-4.png" alt="Small Card Image">
+            <div class="story-content">
+              <span class="story-date">September 10, 2019</span>
+              <h3 class="story-small-title">Classroom management techniques for new tutors</h3>
+            </div>
+          </div>
+          <div class="small-4 story">
+            <img src="assets/story-5.png" alt="Small Card Image">
+            <div class="story-content">
+              <span class="story-date">July 19, 2019</span>
+              <h3 class="story-small-title">Conversation rhymes improve kids listening</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="view-all-btn">
+        <button>View All</button>
+      </div>
 
-        </section>
-    </main>
-    <footer>
+    </section>
+  </main>
+  <footer>
+    <div class="footer-left">
+      <div class="footer-left-top"><img src="assets/logo.png" alt="">
+        <H3>Kids <br> Education</H3>
+      </div>
+      <p class="footer-para">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon
+        pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+    </div>
+    <div class="footer-center">
+      <h4 id="ab-sc">About School</h4>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Facilities</li>
+        <li>Admission</li>
+      </ul>
+    </div>
+    <div class="footer-right">
+      <h4>Keep In Touch</h4>
+      <div class="logo">
+        <img src="assets/fb.png" alt=""><img src="assets/dribble.png" alt=""><img src="assets/twitter.png" alt=""><img
+          src="assets/google+.png" alt="">
+      </div>
+    </div>
 
-    </footer>
+  </footer>
 
 </body>
 
